--- a/main.html
+++ b/main.html
@@ -8,19 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="hero" >
+	<div class="hero-section" >
 		<div class="product-cards" >
-			<div class="card" >
+			<div class="product-card" >
 				<img src="https://m.media-amazon.com/images/I/41FE6cItm3L.jpg" /> 
 				<h3>Product 1</h3>
 				<p>Product 1 description</p>
 			</div>
-			<div class="card" >
+			<div class="product-card" >
 				<img src="https://m.media-amazon.com/images/I/41FE6cItm3L.jpg" /> 
 				<h3>Product 1</h3>
 				<p>Product 1 description</p>
 			</div>
-			<div class="card" >
+			<div class="product-card" >
 				<img src="https://m.media-amazon.com/images/I/41FE6cItm3L.jpg" /> 
 				<h3>Product 1</h3>
 				<p>Product 1 description</p>
