--- a/main.html
+++ b/main.html
@@ -16,14 +16,14 @@
 				<p>Product 1 description</p>
 			</div>
 			<div class="product-card" >
-				<img src="https://m.media-amazon.com/images/I/41FE6cItm3L.jpg" /> 
-				<h3>Product 1</h3>
-				<p>Product 1 description</p>
+				<img src="https://m.media-amazon.com/images/I/61aRNPVrYyL._AC_SY135_.jpg" /> 
+				<h3>Product 2</h3>
+				<p>Product 2 description</p>
 			</div>
 			<div class="product-card" >
-				<img src="https://m.media-amazon.com/images/I/41FE6cItm3L.jpg" /> 
-				<h3>Product 1</h3>
-				<p>Product 1 description</p>
+				<img src="https://m.media-amazon.com/images/I/61rq3n8ZrUL._AC_SY135_.jpg" /> 
+				<h3>Product 3</h3>
+				<p>Product 3 description</p>
 			</div>
 		</div>
 	</div>
