--- a/main.html
+++ b/main.html
@@ -7,26 +7,39 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<div class="hero-section" >
-		<div class="product-cards" >
-			<div class="product-card" >
-				<img src="https://m.media-amazon.com/images/I/41FE6cItm3L.jpg" /> 
+	<div class="hero-section">
+		<img src="https://m.media-amazon.com/images/I/51ZVeRqZvGL._SX3000_.jpg"
+		</div>
+		<div class="product-cards">
+			<div class="product-card">
+				<img src="https://m.media-amazon.com/images/I/41FE6cItm3L.jpg">
 				<h3>Product 1</h3>
 				<p>Product 1 description</p>
 			</div>
-			<div class="product-card" >
-				<img src="https://m.media-amazon.com/images/I/61aRNPVrYyL._AC_SY135_.jpg" /> 
+			<div class="product-card">
+				<img src="https://m.media-amazon.com/images/I/61aRNPVrYyL._AC_SY135_.jpg">
 				<h3>Product 2</h3>
 				<p>Product 2 description</p>
 			</div>
-			<div class="product-card" >
-				<img src="https://m.media-amazon.com/images/I/61rq3n8ZrUL._AC_SY135_.jpg" /> 
+			<div class="product-card">
+				<img src="https://m.media-amazon.com/images/I/61rq3n8ZrUL._AC_SY135_.jpg">
 				<h3>Product 3</h3>
 				<p>Product 3 description</p>
 			</div>
 		</div>
-	</div>
+	<div class="comment-section">
+        <h2>Comments</h2>
+        <textarea placeholder="Add a comment"></textarea>
+        <div class="comments">
+            <!-- Dummy comments -->
+            <div class="comment">
+                <p><strong>User 1:</strong> This product is great!</p>
+            </div>
+            <div class="comment">
+                <p><strong>User 2:</strong> I love the design.</p>
+            </div>
+        </div>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
